--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,45 @@
 @tailwind utilities;
 
 .dark {
-  color-scheme: dark;
-  background: rgb(17, 24, 39);
+    background: #0f0f0f;
+}
+
+body::-webkit-scrollbar {
+    width: 16px;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+}
+
+// Light Mode
+
+body::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+body {
+    scrollbar-color: #737373 #ffffff;
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #737373;
+    border: 4px solid #ffffff;
+}
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #a3a3a3;
+}
+
+// Dark Mode
+
+.dark body::-webkit-scrollbar-track {
+    background: #0f0f0f;
+}
+.dark body {
+    scrollbar-color: #a3a3a3 #0f0f0f!important;
+}
+.dark body::-webkit-scrollbar-thumb {
+    background-color: #a3a3a3!important;
+    border: 4px solid #0f0f0f!important;
+}
+.dark body::-webkit-scrollbar-thumb:hover {
+    background-color: #737373!important;
 }
