--- a/app/globals.css
+++ b/app/globals.css
@@ -36,41 +36,14 @@ body::-webkit-scrollbar-thumb:hover {
     background: #0f0f0f;
 }
 .dark body {
-    scrollbar-color: #a3a3a3 #0f0f0f!important;
+    scrollbar-color: #a3a3a3 #0f0f0f !important;
 }
 .dark body::-webkit-scrollbar-thumb {
-    background-color: #a3a3a3!important;
-    border: 4px solid #0f0f0f!important;
+    background-color: #a3a3a3 !important;
+    border: 4px solid #0f0f0f !important;
 }
 .dark body::-webkit-scrollbar-thumb:hover {
-    background-color: #737373!important;
-}
-
-@keyframes example {
-    0% {
-        transform: translateY(0);
-    }
-    15% {
-        transform: translateY(-550px);
-    }
-    30% {
-        transform: translateY(-345px);
-    }
-    45% {
-        transform: translateY(-420px);
-    }
-    60% {
-        transform: translateY(-388px);
-    }
-    75% {
-        transform: translateY(-403px);
-    }
-    85% {
-        transform: translateY(-399px);
-    }
-    100% {
-        transform: translateY(-400px);
-    }
+    background-color: #737373 !important;
 }
 
 @keyframes linevert {
@@ -78,14 +51,100 @@ body::-webkit-scrollbar-thumb:hover {
         transform: translateX(0);
     }
     100% {
-    transform: translateX(400px);
+        transform: translateX(400px);
     }
 }
 
-.play-example {
-    animation: example 6000ms ease-in-out infinite;
+@keyframes examplegenerated2 {
+    0% {
+        transform: translateY(-0px);
+        animation-timing-function: cubic-bezier(0, 0, 0.933, 0.961);
+    }
+    1.5% {
+        transform: translateY(--41.2px);
+        animation-timing-function: cubic-bezier(0.02, 0.035, 0.68, 0.691);
+    }
+    6.5% {
+        transform: translateY(-96px);
+        animation-timing-function: cubic-bezier(0.304, 0.301, 0.881, 0.876);
+    }
+    20% {
+        transform: translateY(-141.2px);
+        animation-timing-function: cubic-bezier(0.067, 0.119, 0.933, 0.939);
+    }
+    21.5% {
+        transform: translateY(-10px);
+        animation-timing-function: cubic-bezier(0.05, 0.063, 0.683, 0.693);
+    }
+    27.5% {
+        transform: translateY(-60.8px);
+        animation-timing-function: cubic-bezier(0.28, 0.3, 0.72, 0.8);
+    }
+    30% {
+        transform: translateY(-64.8px);
+        animation-timing-function: cubic-bezier(0.2, 0.255, 0.6, 0.677);
+    }
+    31% {
+        transform: translateY(-141.6px);
+        animation-timing-function: cubic-bezier(0.319, 0.325, 0.719, 0.722);
+    }
+    47% {
+        transform: translateY(-226.4px);
+        animation-timing-function: cubic-bezier(0.271, 0, 0.788, 1);
+    }
+    55.5% {
+        transform: translateY(-226.4px);
+        animation-timing-function: cubic-bezier(0.2, 0.21, 0.6, 0.742);
+    }
+    56% {
+        transform: translateY(-251.2px);
+        animation-timing-function: cubic-bezier(0.246, 0.25, 0.692, 0.708);
+    }
+    62.5% {
+        transform: translateY(-260.8px);
+        animation-timing-function: cubic-bezier(0.289, 0.293, 0.656, 0.662);
+    }
+    71.5% {
+        transform: translateY(-350.8px);
+        animation-timing-function: cubic-bezier(0.325, 0.343, 0.688, 0.701);
+    }
+    79.5% {
+        transform: translateY(-377.6px);
+        animation-timing-function: cubic-bezier(0.3, 0.5, 0.767, 1);
+    }
+    82.5% {
+        transform: translateY(-376.8px);
+        animation-timing-function: cubic-bezier(0.2, 0.212, 0.8, 0.988);
+    }
+    83% {
+        transform: translateY(-280.4px);
+        animation-timing-function: cubic-bezier(0, 0, 0.8, 0.983);
+    }
+    83.5% {
+        transform: translateY(-304px);
+        animation-timing-function: cubic-bezier(0, 0.016, 0.8, 0.938);
+    }
+    84% {
+        transform: translateY(-278.4px);
+        animation-timing-function: cubic-bezier(0.057, 0.067, 0.81, 0.818);
+    }
+    94.5% {
+        transform: translateY(-368.4px);
+        animation-timing-function: cubic-bezier(0.18, 0.188, 0.86, 0.875);
+    }
+    99.5% {
+        transform: translateY(-355.6px);
+        animation-timing-function: cubic-bezier(0, 0.135, 1, 1);
+    }
+    100% {
+        transform: translateY(-400px);
+    }
+}
+
+.play-generated {
+    animation: examplegenerated2 5000ms linear infinite;
 }
 
 .line-vert {
-    animation: linevert 6000ms linear infinite;
+    animation: linevert 5000ms linear infinite;
 }
